# ClothoNAV

./: .gitignore  CMakeLists.txt  Makefile  README.md  VersionInfo.h  compile_commands.json  cones2.csv  cones_abs.csv  plot_track.py  racetrack_cones.csv  racetrack_cones_long.csv
assets/: gps_maps.json
assets/sample/: gps_vadena.csv
core/: CMakeLists.txt
core/executables/: main.cpp
core/executables/longitudinal/: main.cpp
core/src/map/: map.cpp  map.hpp  spline_cones.cpp  spline_cones.hpp
core/src/parameters/: parameters.cpp  parameters.hpp
core/src/pid/: pid.cpp  pid.h
core/src/telemetry/: Communication.cpp  Communication.h  Data.h
core/src/trajectory/: spline.cpp  spline.h  trajectory.cpp  trajectory.h
core/src/ui/: circuit.cpp  longitudinal.cpp  menu.cpp
core/src/utils/: Button.cpp  Button.hpp  CheckBox.cpp  CheckBox.hpp  InputField.cpp  InputField.hpp  app_utils.cpp  app_utils.hpp  commands.cpp  commands.hpp  utils.cpp  utils.hpp
debug/: CMakeCache.txt  Makefile  VersionInfo.h  compile_commands.json
debug/core/: Makefile
debug/libs/: Makefile
debug/protobuffer/: Makefile
lib/: libpaho-mqtt3a.so.1.3.13  libpaho-mqtt3as.so.1.3.13  libpaho-mqtt3c.so.1.3.13  libpaho-mqtt3cs.so.1.3.13
libs/: CMakeLists.txt
libs/CsvParser/: CsvParser.cpp  CsvParser.hh
protobuffer/: CMakeLists.txt  Makefile  compile.sh
